Attempted to fix page-break printout problem on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -1126,18 +1126,6 @@ section {
         break-inside: avoid;
     }
 
-    .grid.grid--experience.break-inside--avoid {
-        break-inside: avoid;
-    }
-
-    .card.break-inside--avoid {
-        break-inside: avoid;
-    }
-
-    .break-inside--avoid {
-        break-inside: avoid;
-    }
-
     header, .footer {
         box-shadow: none;
     }
